# NucFlag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  NucPlot.py  README.md  config.toml  nucflag.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml  pypi.yml
config/: config.toml
docs/: README.md
nucflag/: classifier.py  common.py  config.py  constants.py  io.py  main.py  misassembly.py  plot.py  region.py  utils.py
nucflag/breakdown/: __init__.py  cli.py  run.py
nucflag/call/: __init__.py  cli.py  io.py  plot.py  region.py  run.py
nucflag/classifier/: classifier.py  collapse.py  common.py  false_duplication.py  gap.py  het.py  misjoin.py
nucflag/config/: __init__.py  cli.py  run.py
nucflag/consensus/: __init__.py  cli.py  constants.py  run.py
nucflag/ideogram/: __init__.py  cli.py  main.py  run.py
nucflag/qv/: __init__.py  cli.py  run.py
nucfreq/: classifier.py  config.py  constants.py  main.py  misassembly.py  plot.py  region.py
test/: config.toml  expected.bed  test.bed  test_nucplot.py  test_region.py
test/all_gap/: README.md  expected.bed
test/bigwig/: chrom_sizes.tsv
test/call/: test_call.py
test/collapse_other/: config_perc.toml  expected_perc.bed  region.bed
test/consensus/: test_consensus.py
test/false_dupe/: config.toml  expected_misassemblies.bed  expected_status.bed  region.bed
test/helpers/: integration.py
test/ignore_mtype/: expected_status.bed  hg002v1.1_ont_q28_lc24_subset_no_fa.cram  hg002v1.1_ont_q28_lc24_subset_no_fa.cram.crai  region.bed
test/ignored/: HG00731_hifi.bam.bai  HG00731_hifi.bam.csi  config.toml  ignore.bed  region.bed
test/merge_misjoin_false_dupe/: expected_misassemblies.bed  expected_status.bed  region.bed
test/metrics/: hgsvc3_ctg_status.tsv  misasm_stats.ipynb
test/misjoin/: HG00171_hifi.bam  HG00171_hifi.bam.bai  config_perc.toml  config_static.toml  expected.bed  expected_perc.bed  expected_static.bed
test/missing_valleys/: config.toml  expected_misassemblies.bed  expected_status.bed
test/overlay/: .gitignore  README.md  config.toml  region.bed  region_overlap_partial.bed  repeatmasker.bed  repeatmasker_ignore.bed  repeatmasker_overlap_partial.bed
test/qv/: test_qv.py
test/skip_outlier_valleys/: config.toml  expected_misassemblies.bed  expected_status.bed  region.bed
test/standard/: HG00096_hifi.bam.bai  expected.bed
test/status_ignore_het/: config.toml  expected_misassemblies.bed  expected_status.bed  ignore.bed  region.bed
test/subtract_interval/: config.toml  expected.bed  region.bed
test/workflow/: env.yaml  (+1 more)
(+23 files in other folders)
