[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
include = ["nucfreq*"]
exclude = ["docs*", "test*"]

[project]
name = "nucfreq"
authors = [
    {name = "Keith Oshima", email = "oshimak@pennmedicine.upenn.edu"},
    {name = "Mitchell R. Vollger", email = "mrvollger@gmail.com"},
]
description = "Nucfreq misassembly identifier."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dynamic = ["version", "dependencies"]

[project.scripts]
nucfreq = "nucfreq.main:main"
