[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
include = ["nucflag*"]
exclude = ["docs*", "test*"]

[project]
name = "nucflag"
version = "0.0.5"
authors = [
    {name = "Keith Oshima", email = "oshimak@pennmedicine.upenn.edu"},
    {name = "Mitchell R. Vollger", email = "mrvollger@gmail.com"},
]
description = "NucFlag misassembly identifier."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/logsdon-lab/NucFlag"

[project.scripts]
nucflag = "nucflag.main:main"
